tiene el .tex de porras wuuuu

--- a/Main.tex
+++ b/Main.tex
@@ -30,8 +30,6 @@ includefoot]{geometry}
 
 \newcommand{\R}{\mathds{R}}
 
-
-
 \renewcommand{\*}{\cdot}
 
 \newtheorem{theorem}{Teorema}[section]
@@ -43,7 +41,9 @@ includefoot]{geometry}
 		\begin{center}
 			\Large{\textbf{Espacios vectoriales}} \\[0.1cm]
 			\huge{Matemáticas para las ciencias aplicadas II}\\[0.2cm]
-			\large{Merino Peña Kevin Ariel }\\
+			\large{Aquino Chapa Armando Abraham y Merino Peña Kevin Ariel }
+			\\
+			
 			\today
 		\end{center}
 		\let\newpage\relax% Avoid following page break
@@ -116,6 +116,7 @@ includefoot]{geometry}
 		\end{pmatrix}
 		\end{equation*}
 		A los elementos $ a_{i,j} $ con $ 1 \leq j \leq n $ y $ 1 \leq i \leq m $ se les llama entradas de la matriz, a las matrices las denotamos por $ \mathds{A} $ \textit{(letras mayúsculas)} y al conjunto de las matrices de mn se les denota por $ M_{m\times n}(\F) $
+		
 	\end{definition}
 	
 	
