Respuesta al ejercicio 1

--- a/Main.tex
+++ b/Main.tex
@@ -43,7 +43,6 @@ includefoot]{geometry}
 			\huge{Matemáticas para las ciencias aplicadas II}\\[0.2cm]
 			\large{Aquino Chapa Armando Abraham y Merino Peña Kevin Ariel }
 			\\
-			
 			\today
 		\end{center}
 		\let\newpage\relax% Avoid following page break
@@ -104,7 +103,10 @@ includefoot]{geometry}
 		\end{enumerate}
 	\end{definition}
 	\subsection{Definición de las operaciones binarias en espacios vectoriales}
-	\begin{definition}
+\newpage
+	
+	1. Escribe el vector cero en $M_{3x4}(\mathbb{R})$
+		\begin{definition}[Matriz]
 		Una \textbf{Matriz} es un arreglo rectangular de elementos de un campo $ \F(\R) $ de la forma
 		\begin{equation*}
 		A_{m,n} = 
@@ -115,9 +117,25 @@ includefoot]{geometry}
 		a_{m,1} & a_{m,2} & \cdots & a_{m,n} 
 		\end{pmatrix}
 		\end{equation*}
-		A los elementos $ a_{i,j} $ con $ 1 \leq j \leq n $ y $ 1 \leq i \leq m $ se les llama entradas de la matriz, a las matrices las denotamos por $ \mathds{A} $ \textit{(letras mayúsculas)} y al conjunto de las matrices de mn se les denota por $ M_{m\times n}(\F) $
+		A los elementos $ a_{i,j} $ con $ 1 \leq j \leq n $ y $ 1 \leq i \leq m $ se les llama entradas de la matriz, a las matrices las denotamos por $ \mathds{A} $ 				\textit{(letras mayúsculas)} y al conjunto de las matrices de mn se les denota por $ M_{m\times n}(\F) $
 		
 	\end{definition}
+	De esta manera tenemos que el vector cero de la matriz de 3 renglones por 4 columnas es aquella cuyas entradas (todas) son 0 \textit{i. e. }
+		\begin{equation*}
+		A_{3x4} = 
+		\begin{pmatrix}
+		a_{1,1} & a_{1,2} & a_{1,3} & a_{1,4} \\
+		a_{2,1} & a_{2,2} & a_{2,3} & a_{2,4} \\
+		a_{3,1} & a_{3,2} & a_{3,3} & a_{3,4} 
+		\end{pmatrix}
+		= 
+		\begin{pmatrix}
+		0 & 0 & 0 & 0\\
+		0 & 0 & 0 & 0 \\
+		0 & 0 & 0 & 0
+		\end{pmatrix}
+		\end{equation*}
+		
 	
 	
 \end{document}
