tiene lo necesario para el segundo ejercicio

--- a/Main.tex
+++ b/Main.tex
@@ -136,6 +136,6 @@ includefoot]{geometry}
 		\end{pmatrix}
 		\end{equation*}
 		
-	
+ 2. Sea $V$ el conjunto de todas las funciones diferenciables definidas en $\mathbb{R}$. Muestre que $V$ es un espacio vectorial con las operaciones usuales de suma y multiplicación por un escalar para funciones. 
 	
 \end{document}
