--- a/Main.tex
+++ b/Main.tex
@@ -49,61 +49,7 @@ includefoot]{geometry}
 		\hrulefill
 	\end{titlepage}
 	\section{Definición de espacio vectorial}
-	\begin{definition}
-		Definimos $ \R^2 $ como el conjunto de pares ordenados $ (x,y) $ tal que $ x $ es un real y $ y $ es un real.
-		\[ \R^2 = \{(x,y) | x \in \R \land y \in \R \} \]
-	\end{definition}
-	\begin{definition}
-		\textbf{Campo}, conjunto no vacío con operaciones binarias (+,*) 
-		$ \tq $ cumplen las siguientes 11 propiedades
-		\begin{enumerate}[(I)]
-			\item Cerrado bajo la suma
-			\[x,y \in \R \implies x + y \in \R \]
-			\item  Cerrado bajo el producto
-			\[  x,y \in \R \implies x\cdot y \in \R \]
-			\item Conmutatividad para la suma
-			\[  x,y \in \R \implies x + y = y + x\]
-			\item Conmutatividad para el producto
-			\[  x,y \in \R \implies x \cdot y  = y\cdot x \]
-			\item Asociatividad para el producto
-			\[  x,y,z \in \R \implies x\* y = y \* x \]
-			\item Asociatividad para la suma
-			\[  x,y,z  \in \R \implies x +(y+z) = y + (x +z)  \]
-			\item Neutro aditivo
-			\[ \exists 0 \in \R \tq x + 0 = x \]
-			\item Neutro multiplicativo
-			\[ \exists 1 \in \R \tq x \* 1 = x  \]
-			\item Inverso aditivo
-			\[ \exists n  \in \R \tq x + n = 0  \]
-			\item Inverso multiplicativo
-			\[ \exists n \in \R \backslash \{0\} \tq x\* n = 1 \]
-			\item Distributividad
-			\[ x,y,z \in \R \tq x \*(y+z) = x\* y + x \* z  \]
-		\end{enumerate}
-	\end{definition}
-	\begin{definition}
-		\textbf{Espacio vectorial} Sea $ \V $ un conjunto  no vacío, con dos operaciones binarias y $ \F $ un campo, diremos que $ \V $ es espacio vectorial si cumple
-		\begin{enumerate}[(i)]
-			\item Conmutatividad para la suma
-			\[ \vec{x}, \vec{y} \in \V \implies \vec{x} + \vec{y} = \vec{y} + \vec{x} \]
-			\item Asociatividad para la suma
-			\[ \vec{x},\vec{y},\vec{z} \in \V \implies (\vec{x} + \vec{y}) + \vec{z} = ( \vec{z} + \vec{y}) + \vec{x}  \]
-			\item Neutro Aditivo
-			\[ \exists \vec{0}\in \V \tq \vec{x} + \vec{0} = \vec{x} \]
-			\item Inverso aditivo 
-			\[\forall \vec{x} \in \V \quad \exists \vec{y} \in \V \tq \vec{x} + \vec{y} = 0 \]
-			\item Neutro multiplicativo
-			\[\forall \vec{x} \in \V \implies 1\* \vec{x} = \vec{x} \]
-			\item Asociatividad para la multiplicación
-			\[ \forall \ \alpha, \beta \in \F \ \land \ \vec{x} \in \V \implies (\alpha \beta)\vec{x} = \alpha(\beta \vec{x}) \]
-			\item Distributividad entre escalares y vectores
-			\[  \forall \ \alpha, \beta \in \F \ \land \ \vec{x} \in \V \implies (\alpha + \beta)\vec{x} = \alpha \vec{x} + \beta \vec{x} \]
-			\item Distributividad entre vectores y escalares
-			\[  \forall \ \alpha \in \F \ \land \ \vec{x} \in \V \implies \alpha (\vec{x} + \vec{y}) = \alpha \vec{x} + \alpha \vec{y} \]	
-		\end{enumerate}
-	\end{definition}
-	\subsection{Definición de las operaciones binarias en espacios vectoriales}
-\newpage
+
 	
 	1. Escribe el vector cero en $M_{3x4}(\mathbb{R})$
 		\begin{definition}[Matriz]
@@ -138,4 +84,8 @@ includefoot]{geometry}
 		
  2. Sea $V$ el conjunto de todas las funciones diferenciables definidas en $\mathbb{R}$. Muestre que $V$ es un espacio vectorial con las operaciones usuales de suma y multiplicación por un escalar para funciones. 
 	
+	Veamos que la derivada cumple las siguientes propiedades
+	\begin{align*}
+	(f(x) + g(x))' &= \lim_{h\to 0}
+	\end{align*}
 \end{document}
