--- a/Main.tex
+++ b/Main.tex
@@ -48,10 +48,9 @@ includefoot]{geometry}
 		\let\newpage\relax% Avoid following page break
 		\hrulefill
 	\end{titlepage}
-	\section{Definición de espacio vectorial}
 
 	
-	1. Escribe el vector cero en $M_{3x4}(\mathbb{R})$
+	\noindent 1. Escribe el vector cero en $M_{3x4}(\mathbb{R})$
 		\begin{definition}[Matriz]
 		Una \textbf{Matriz} es un arreglo rectangular de elementos de un campo $ \F(\R) $ de la forma
 		\begin{equation*}
@@ -82,7 +81,7 @@ includefoot]{geometry}
 		\end{pmatrix}
 		\end{equation*}
 		
- 2. Sea $V$ el conjunto de todas las funciones diferenciables definidas en $\mathbb{R}$. Muestre que $V$ es un espacio vectorial con las operaciones usuales de suma y multiplicación por un escalar para funciones. 
+ \noindent2. Sea $V$ el conjunto de todas las funciones diferenciables definidas en $\mathbb{R}$. Muestre que $V$ es un espacio vectorial con las operaciones usuales de suma y multiplicación por un escalar para funciones. 
 	
 	Veamos que la derivada cumple las siguientes propiedades
 	\begin{align*}
@@ -104,8 +103,11 @@ includefoot]{geometry}
 	& = \lim_{h\to 0} \dfrac{c-c}{h}\\
 	&= 0
 	\end{align*}
-	Esto se vale para cualquier constante, en particular el 0
+	Esto se vale para cualquier constante, en particular el 0\\
 	
+ \noindent 3. Prueba que el conjunto de las funciones pares en $\mathbb{R}$ es un espacio vectorial con suma y multiplicación por escalar usuales para funciones. Recuerde que una función es par si $\forall x \in Dom(f)$ entonces $f(-x) = f(x)$ \\
+ 	
+ 	Si tenemos en cuenta que $f(-t) + g(-t) = f(t) + g(t)$ y que si tenemos constantes siempre ocurre que $cf(-t) = cf(t) $ entonces ya hemos probado las dos primeras condiciones y para hallar el neutro basta con usar el 0 del cambo $(\R)$ para notar que también lo manda al 0 vector.
 	
 	
 \end{document}
