--- a/Main.tex
+++ b/Main.tex
@@ -15,6 +15,7 @@ includefoot]{geometry}
 \usepackage{amsthm}
 \usepackage{graphicx}
 \usepackage{paralist}
+\usepackage{tasks}
 
 \newcommand{\V}{\mathds{V}}
 
@@ -116,7 +117,35 @@ includefoot]{geometry}
 \end{enumerate}
 ¿Es $V$ un espacio vectorial sobre $\mathbb{R}$ con estas operaciones?\\
 
-No puede ser un espacio vectorial porque si tenemos que \[ 0(a_1, a_2) = (0, a_2)  \] para complir el cero vector, entonces se compliría para cualquier $a_2$ lo cual no es posible pues contradice la unicidad del cero
-	
+No puede ser un espacio vectorial porque si tenemos que \[ 0(a_1, a_2) = (0, a_2)  \] para complir el cero vector, entonces se compliría para cualquier $a_2$ lo cual no es posible pues contradice la unicidad del cero.\\
+
+\noindent 5. Determinar cuales de los siguientes conjuntos son subespacios de $\mathbb{R}^{3}$ bajo las operaciones de suma y multiplicación por un escalar usual.\\
+Basta con revisar si en cada caso se encuentra cerrado bajo la multiplicación escalar y bajo la adición, además que siempre contenga al o
+
+\begin{tasks}(1)
+\task $W_{1} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  a_{1}=3a_{2}$ y $a_{3}=-a_{2} \rbrace$
+
+Sí es linear porque lo satisface $t(3,1,-1)$
+\task $W_{2} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  a_{1} = a_{3} + 2 \rbrace$
+
+NO es linear porque no contiene al elemento neutro dentro del espacio vectorial.
+\task $W_{3} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  2a_{1} - 7a_{2} + a_{3} = 0 \rbrace$
+
+Sí es linear pues lo satisface $(2,-7,1)$
+\task $W_{4} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  a_{1} - 4a_{2} - a_{3} = 0 \rbrace$
+
+Sí es linear pues lo satisface $(1,-4,-1)$
+
+\end{tasks}
+
+
+\noindent 6. En cada caso diga si los vectores son generados por el conjunto $S$
+
+\begin{tasks}(1)
+\task $(2,-1,1), S =  \lbrace (1,0,2),(-1,1,1) \rbrace$
+\task $(2,-1,1,3), S =  \lbrace (1,0,1,-1),(0,1,1,1) \rbrace$
+\task $2x^3 - x^2 + x + 3, S =  \lbrace x^3 + x^2 + x +1, x^2 + x +1, x +1 \rbrace$
+\task $ \begin{pmatrix} 1 & 2 \\ -3 & 4 \end{pmatrix},  S =  \left \lbrace \begin{pmatrix} 1 & 0 \\ -1 & 0 \end{pmatrix} , \begin{pmatrix} 0 & 1 \\ 0 &1 \end{pmatrix} , \begin{pmatrix} 1 & 1 \\ 0 &0 \end{pmatrix} \right \rbrace$
+\end{tasks}
 	
 \end{document}
