Cambios para que alineamiento quedé sin numeración

--- a/Main.tex
+++ b/Main.tex
@@ -161,11 +161,11 @@ Ahora:
 2\alpha_{1} + \alpha_{2} = 1\\
 \end{eqnarray*}
 Al resolver el sistema, obtenemos:
-\begin{eqnarray}
+\begin{eqnarray*}
 \alpha_{1}=1 \\
 \alpha_{2} = -1 \\
 1 = 1
-\end{eqnarray}
+\end{eqnarray*}
 Entonces:\\ $1(1,0,2) + (-1)(-1,1,1) = (1,0,2) + (1,-1,-1) = (2,-1,1)$\\
 Cómo el sistema de ecuaciones si se satisface, el conjunto $S$ SI genera al vector $(2,-1,-1)$
 \task $(2,-1,1,3), S =  \lbrace (1,0,1,-1),(0,1,1,1) \rbrace$
