--- a/Main.tex
+++ b/Main.tex
@@ -161,14 +161,41 @@ Ahora:
 2\alpha_{1} + \alpha_{2} = 1\\
 \end{eqnarray*}
 Al resolver el sistema, obtenemos:
-\begin{eqnarray}
+\begin{eqnarray*}
 \alpha_{1}=1 \\
 \alpha_{2} = -1 \\
 1 = 1
-\end{eqnarray}
+\end{eqnarray*}
 Entonces:\\ $1(1,0,2) + (-1)(-1,1,1) = (1,0,2) + (1,-1,-1) = (2,-1,1)$\\
 Cómo el sistema de ecuaciones si se satisface, el conjunto $S$ SI genera al vector $(2,-1,-1)$
 \task $(2,-1,1,3), S =  \lbrace (1,0,1,-1),(0,1,1,1) \rbrace$
+
+Sea $\alpha _1$, $\alpha _2 \in \mathbb{R}$.\\
+Entonces: $(2,-1,1,3)=\alpha_{1}(1,0,1,-1)+\alpha_{2}(0,1,1,1)= (\alpha_{1},0,\alpha_{1},-\alpha_{1})+(0,\alpha_{2},\alpha_{2},\alpha_{2})= \alpha_{1},\alpha_{2},\alpha_{1}+\alpha_{2},-\alpha_{1}+\alpha_{2}$.\\
+Tenemos el siguiente sistema de ecuaciones:\\
+\begin{eqnarray*}
+\alpha_{1}=2\\
+\alpha_{2} = -1\\
+\alpha_{1}+\alpha_{2}=1\\
+-\alpha_{1}+\alpha_{2}=3\\
+\end{eqnarray*}
+Ahora:\\
+\begin{eqnarray*}
+\alpha_{1}=2\\
+\alpha_{2}= -1\\
+2-1  =1\\
+-(-1)+2 = 3\\
+\end{eqnarray*}
+Por último:
+\begin{eqnarray*}
+\alpha_{1}=2\\
+\alpha_{2}=-1\\
+1=1\\
+3=3\\
+\end{eqnarray*}
+Al resolver el sistema de ecuaciones verificamos si el conjunto $S$ genera al vector. Entonces:\\
+$2(1,0,1,-1)+(-1)(0,1,1,1)=(2,0,2,-2)+(0,-1,-1,-1)=(2,-1,-1,-3)$\\
+Como el producto de los escalares por los elementos del conjunto $S$ no forman al vector, podemos concluir que $S$ NO genera a $(2,-1,1,3)$.
 \task $2x^3 - x^2 + x + 3, S =  \lbrace x^3 + x^2 + x +1, x^2 + x +1, x +1 \rbrace$
 \task $ \begin{pmatrix} 1 & 2 \\ -3 & 4 \end{pmatrix},  S =  \left \lbrace \begin{pmatrix} 1 & 0 \\ -1 & 0 \end{pmatrix} , \begin{pmatrix} 0 & 1 \\ 0 &1 \end{pmatrix} , \begin{pmatrix} 1 & 1 \\ 0 &0 \end{pmatrix} \right \rbrace$
 \end{tasks}
