agregando la parte de los no posibles

--- a/Main.tex
+++ b/Main.tex
@@ -200,6 +200,30 @@ Como el producto de los escalares por los elementos del conjunto $S$ no forman a
 
 c) $2x^3 - x^2 + x + 3, S =  \lbrace x^3 + x^2 + x +1, x^2 + x +1, x +1 \rbrace$\\
 
+Sean $\alpha_1 $, $\alpha_2$ y $\alpha_3$ elementos del campo, si suponemos que $2x^3 - x^2 + x + 3$ es generado por $S$ implicará que existen dichos 3 elementos $\tq$ 
+\[ 2x^3 - x^2 + x + 3 = \alpha_1 (x^3 + x^2 + x +1) + \alpha_2 (x^2 + x +1) + \alpha_3 (x +1) \]
+
+\begin{eqnarray}
+	\alpha_1 x^3 + \alpha_1 x^2 + \alpha_1 x + \alpha_1 	\\
+	\alpha_2 x^2 + \alpha_2 x + \alpha_2 \\
+	\alpha_3 x + \alpha_3 
+\end{eqnarray}
+Por lo que ocurre lo siguiente
+\[ 2x^3 - x^2 + x + 3 = \alpha_1 x^3 + \alpha_1 x^2 + \alpha_1 x + \alpha_1 + \alpha_2 x^2 + \alpha_2 x + \alpha_2 +\alpha_3 x + \alpha_3  \]
+
+\begin{eqnarray*}
+2x^3 - x^2 + x + 3 &= \alpha_1 x^3 + \alpha_1 x^2 + \alpha_1 x + \alpha_1 + \alpha_2 x^2 + \alpha_2 x + \alpha_2 +\alpha_3 x + \alpha_3 \\
+ &= x^3 (\alpha_3)  + x^2 (\alpha_2 + \alpha_1) + x(\alpha_3 + \alpha_2 + \alpha_1) + \alpha_1 + \alpha_2 + \alpha_3
+ \end{eqnarray*}
+ 
+\begin{align*}
+	\alpha_3 &=  2\\
+	\alpha_2 &= -1 - \alpha_1 \\
+	\alpha_2 &= -1 - 2\\
+	\alpha_2 &= -3
+\end{align*}
+
+
 
 d) $ \begin{pmatrix} 1 & 2 \\ -3 & 4 \end{pmatrix},  S =  \left \lbrace \begin{pmatrix} 1 & 0 \\ -1 & 0 \end{pmatrix} , \begin{pmatrix} 0 & 1 \\ 0 &1 \end{pmatrix} , \begin{pmatrix} 1 & 1 \\ 0 &0 \end{pmatrix} \right \rbrace$
 
