Tiene solución el inciido c de la pregunta 2

--- a/Main.tex
+++ b/Main.tex
@@ -215,6 +215,7 @@ Por lo que ocurre lo siguiente
 2x^3 - x^2 + x + 3 &= \alpha_1 x^3 + \alpha_1 x^2 + \alpha_1 x + \alpha_1 + \alpha_2 x^2 + \alpha_2 x + \alpha_2 +\alpha_3 x + \alpha_3 \\
  &= x^3 (\alpha_3)  + x^2 (\alpha_2 + \alpha_1) + x(\alpha_3 + \alpha_2 + \alpha_1) + \alpha_1 + \alpha_2 + \alpha_3
  \end{eqnarray*}
+
  
 \begin{align*}
 	\alpha_3 &=  2\\
@@ -223,7 +224,7 @@ Por lo que ocurre lo siguiente
 	\alpha_2 &= -3
 \end{align*}
 
-
+Ahora llegamos a una contradicción, puesto que el sistema de ecuaciones anterior implica que $\alpha_1 + \alpha_2 + \alpha_3 = 3 = 1$ por lo que el conjunto S no genera $ 2x^3 - x^2 + x + 3$
 
 d) $ \begin{pmatrix} 1 & 2 \\ -3 & 4 \end{pmatrix},  S =  \left \lbrace \begin{pmatrix} 1 & 0 \\ -1 & 0 \end{pmatrix} , \begin{pmatrix} 0 & 1 \\ 0 &1 \end{pmatrix} , \begin{pmatrix} 1 & 1 \\ 0 &0 \end{pmatrix} \right \rbrace$
 
