Tenia errores en la cabecera asi que lo cambiamos un poco

--- a/Main.tex
+++ b/Main.tex
@@ -1,6 +1,6 @@
 \documentclass[letterpaper]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[spanish, es-nodecimaldot]{babel}
+\usepackage[spanish]{babel}
 \usepackage{amssymb, amsmath}
 \usepackage{graphicx}
 \usepackage{lipsum}
@@ -119,11 +119,6 @@ includefoot]{geometry}
 
 No puede ser un espacio vectorial porque si tenemos que \[ 0(a_1, a_2) = (0, a_2)  \] para cumplir el cero vector, entonces se compliría para cualquier $a_2$ lo cual no es posible pues contradice la unicidad del cero.\\
 
-<<<<<<< HEAD
-\noindent \textbf{5}. Determinar cuales de los siguientes conjuntos son subespacios de $\mathbb{R}^{3}$ bajo las operaciones de suma y multiplicación por un escalar usual.\\
-Basta con revisar si en cada caso se encuentra cerrado bajo la multiplicación escalar y bajo la adición, además que siempre contenga al o
-
-=======
 \noindent 5. Determinar cuales de los siguientes conjuntos son subespacios de $\mathbb{R}^{3}$ bajo las operaciones de suma y multiplicación por un escalar usual.\\
 \begin{definition}
 	Sea $ \mathcal{U} $ un subconjunto de $ \mathcal{V}$ espacio vectorial sobre $ \F $ decimos que $ \mathcal{U} $ es un subespacio vectorial de $ \mathcal{V} $ si cumple lo siguiente
@@ -135,7 +130,7 @@ Basta con revisar si en cada caso se encuentra cerrado bajo la multiplicación e
 	\end{enumerate}
 	   
 \end{definition}
->>>>>>> d95c7500ca98027786aa371f7f54eeff10a5b0c4
+
 \begin{tasks}(1)
 \task $W_{1} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  a_{1}=3a_{2}$ y $a_{3}=-a_{2} \rbrace$
 
