cambios para anadir el ejercicio 8

--- a/Main.tex
+++ b/Main.tex
@@ -299,7 +299,7 @@ Por último:
 \end{eqnarray*}
 Al resolver el sistema de ecuaciones verificamos si el conjunto $S$ genera al vector. Entonces:
 \[2(1,0,1,-1)+(-1)(0,1,1,1)=(2,0,2,-2)+(0,-1,-1,-1)=(2,-1,-1,-3)\]
-Como el producto de los escalares por los elementos del conjunto $S$ no forman al vector, podemos concluir que $S$ NO genera a $(2,-1,1,3)$.\\
+Como el producto de los escalares por los elementos del conjunto $S$ no forman al vector, podemos concluir que $S$ \textbf{NO} genera a $(2,-1,1,3)$.\\
 
 \textbf{c)} $2x^3 - x^2 + x + 3, S =  \lbrace x^3 + x^2 + x +1, x^2 + x +1, x +1 \rbrace$\\
 
@@ -591,6 +591,14 @@ Es fácilmente apreciar que $\alpha_{1}=0$, $\alpha_{2}=0$ y $\alpha_{3}=0$\\
 Por lo tanto, podemos concluir que el conjunto $ (1,-1,2), (2,0,1),(-1,2,-1) \in \mathbb{R}^{3}$ es \textbf{linealmente independiente}\\
 
 Recuerde que $P_{n}(\mathbb{R}) = \{ a_0 +  a_1x +  a_2x^2 + \cdots +  a_n x^n \big\vert a_k \in \mathbb{R} \,  \forall k = 0,1,2,\dots n\}$
+\\
+
+\noindent \textbf{8.} ¿Cuáles de los siguientes conjuntos son bases para $\mathbb{R}^{3}$?
+\begin{tasks}(1)
+	\task  $\lbrace (1,0,-1),(2,5,1),(0,-4,3) \rbrace$
+	\task $\lbrace (2,-4,1),(0,3,-1),(6,0,-1) \rbrace$
+	\task $\lbrace (1,2,-1),(1,0,2),(2,1,1) \rbrace$
+\end{tasks}
 
 
 \end{document}
