--- a/Main.tex
+++ b/Main.tex
@@ -807,105 +807,105 @@ $ax^3+bx^2+cx+d = (\alpha_{1})x^3 + (-2\alpha_{1}+4\alpha_{2})x^2 + (\alpha_{2}+
 Tenemos el siguiente sistema de ecuaciones:
 \begin{center}
 	\begin{align*}
-	\alpha_{1}=a\\
-	-2\alpha_{1}+4\alpha_{2}=b\\
-	-\alpha_{2}+3\alpha_{3}=c\\
-	\alpha_{1}+3\alpha_{2}-2\alpha_{3}=d
+	\alpha_{1}&=a\\
+	-2\alpha_{1}+4\alpha_{2}&=b\\
+	-\alpha_{2}+3\alpha_{3}&=c\\
+	\alpha_{1}+3\alpha_{2}-2\alpha_{3}&=d
 	\end{align*}
 \end{center}
 Sustituimos $\alpha_{1}$ en las demás ecuaciones
 \begin{center}
 	\begin{align*}
-	\alpha_{1}=a\\
-	-2a+4\alpha_{2}=b\\
-	-\alpha_{2}+3\alpha_{3}=c\\
-	a+3\alpha_{2}-2\alpha_{3}=d
+	\alpha_{1}&=a\\
+	-2a+4\alpha_{2}&=b\\
+	-\alpha_{2}+3\alpha_{3}&=c\\
+	a+3\alpha_{2}-2\alpha_{3}&=d
 	\end{align*}
 \end{center}
 Del renglón 2 es fácil apreciar cuál es el valor de $\alpha_{2}$
 \begin{center}
 	\begin{align*}
-	\alpha_{1}=a\\
-	\alpha_{2}=\frac{b+2a}{4}\\
-	-\alpha_{2}+3\alpha_{3}=c\\
-	\alpha_{1}+3\alpha_{2}-2\alpha_{3}=d
+	\alpha_{1}&=a\\
+	\alpha_{2}&=\frac{b+2a}{4}\\
+	-\alpha_{2}+3\alpha_{3}&=c\\
+	\alpha_{1}+3\alpha_{2}-2\alpha_{3}&=d
 	\end{align*}
 \end{center}
 De igual forma sustituimos $\alpha_{2}$ en las demás ecuaciones.
 \begin{center}
 	\begin{align*}
-	\alpha_{1}=a\\
-	\alpha_{2}=\frac{b+2a}{4}\\
-	-(\frac{b+2a}{4})+3\alpha_{3}=c\\
-	a+3(\frac{b+2a}{4})-2\alpha_{3}=d
+	\alpha_{1}&=a\\
+	\alpha_{2}&=\frac{b+2a}{4}\\
+	-(\frac{b+2a}{4})+3\alpha_{3}&=c\\
+	a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
 	\end{align*}
 \end{center}
 Observamos que tenemos 2 ecuaciones, en las cuáles sólo hay un valor a encontrar, entonces en estas dos ecuaciones procedemos a encontrar el valor de $\alpha_{3}$. Primero comenzaremos con el renglón 3.
 \begin{center}
 	\begin{align*}
-	\alpha_{1}=a\\
-	\alpha_{2}=\frac{b+2a}{4}\\
-	3\alpha_{3}=\frac{4c}{4}+(\frac{b+2a}{4})\\
-	a+3(\frac{b+2a}{4})-2\alpha_{3}=d
+	\alpha_{1}&=a\\
+	\alpha_{2}&=\frac{b+2a}{4}\\
+	3\alpha_{3}&=\frac{4c}{4}+(\frac{b+2a}{4})\\
+	a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
 	\end{align*}
 \end{center}
 Ahora:
 \begin{center}
 	\begin{align*}
-	\alpha_{1}=a\\
-	\alpha_{2}=\frac{b+2a}{4}\\
-	\alpha_{3}=\frac{\frac{4c+b+2a}{4}}{3}\\
-	a+3(\frac{b+2a}{4})-2\alpha_{3}=d
+	\alpha_{1}&=a\\
+	\alpha_{2}&=\frac{b+2a}{4}\\
+	\alpha_{3}&=\frac{\frac{4c+b+2a}{4}}{3}\\
+	a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
 	\end{align*}
 \end{center}
 Obtenemos el primer valor de $\alpha_{3}$: 
 \begin{center}
 	\begin{align*}
-	\alpha_{1}=a\\
-	\alpha_{2}=\frac{b+2a}{4}\\
-	\alpha_{3}=\frac{4c+b+2a}{12}\\
-	a+3(\frac{b+2a}{4})-2\alpha_{3}=d
+	\alpha_{1}&=a\\
+	\alpha_{2}&=\frac{b+2a}{4}\\
+	\alpha_{3}&=\frac{4c+b+2a}{12}\\
+	a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
 	\end{align*}
 \end{center}
 Encontraremos el valor de $\alpha_{3}$ en la ecuación cuatro.
 \begin{center}
 	\begin{align*}
-	\alpha_{1}=a\\
-	\alpha_{2}=\frac{b+2a}{4}\\
-	\alpha_{3}=\frac{4c+b+2a}{12}\\
-	a+(\frac{3b+6a}{4})-2\alpha_{3}=d
+	\alpha_{1}&=a\\
+	\alpha_{2}&=\frac{b+2a}{4}\\
+	\alpha_{3}&=\frac{4c+b+2a}{12}\\
+	a+(\frac{3b+6a}{4})-2\alpha_{3}&=d
 	\end{align*}
 \end{center}
 \begin{center}
 	\begin{align*}
-	\alpha_{1}=a\\
-	\alpha_{2}=\frac{b+2a}{4}\\
-	\alpha_{3}=\frac{4c+b+2a}{12}\\
-	2\alpha_{3}=a+(\frac{3b+6a}{4})-d
+	\alpha_{1}&=a\\
+	\alpha_{2}&=\frac{b+2a}{4}\\
+	\alpha_{3}&=\frac{4c+b+2a}{12}\\
+	2\alpha_{3}&=a+(\frac{3b+6a}{4})-d
 	\end{align*}
 \end{center}
 \begin{center}
 	\begin{align*}
-	\alpha_{1}=a\\
-	\alpha_{2}=\frac{b+2a}{4}\\
-	\alpha_{3}=\frac{4c+b+2a}{12}\\
-	2\alpha_{3}=\frac{4a}{4}+(\frac{3b+6a}{4})-\frac{4d}{4}
+	\alpha_{1}&=a\\
+	\alpha_{2}&=\frac{b+2a}{4}\\
+	\alpha_{3}&=\frac{4c+b+2a}{12}\\
+	2\alpha_{3}&=\frac{4a}{4}+(\frac{3b+6a}{4})-\frac{4d}{4}
 	\end{align*}
 \end{center}
 \begin{center}
 	\begin{align*}
-	\alpha_{1}=a\\
-	\alpha_{2}=\frac{b+2a}{4}\\
-	\alpha_{3}=\frac{4c+b+2a}{12}\\
-	\alpha_{3}=\frac{\frac{3b+10a-4d}{4}}{2}
+	\alpha_{1}&=a\\
+	\alpha_{2}&=\frac{b+2a}{4}\\
+	\alpha_{3}&=\frac{4c+b+2a}{12}\\
+	\alpha_{3}&=\frac{\frac{3b+10a-4d}{4}}{2}
 	\end{align*}
 \end{center}
 \begin{center}
 	\begin{align*}
-	\alpha_{1}=a\\
-	\alpha_{2}=\frac{b+2a}{4}\\
-	\alpha_{3}=\frac{4c+b+2a}{12}\\
-	\alpha_{3}=\frac{3b+10a-4d}{8}
+	\alpha_{1}&=a\\
+	\alpha_{2}&=\frac{b+2a}{4}\\
+	\alpha_{3}&=\frac{4c+b+2a}{12}\\
+	\alpha_{3}&=\frac{3b+10a-4d}{8}
 	\end{align*}
 \end{center}
 
