--- a/Main.tex
+++ b/Main.tex
@@ -794,8 +794,47 @@ Recuerde que $P_{n}(\mathbb{R}) = \{ a_0 +  a_1x +  a_2x^2 + \cdots +  a_n x^n \
 		\begin{center}
 			$ \therefore \mathcal{S} $ es Base para $ \R^3 $ 
 		\end{center}
-	b) $\lbrace (2,-4,1),(0,3,-1),(6,0,-1) \rbrace$
+	b) $S = \lbrace (2,-4,1),(0,3,-1),(6,0,-1) \rbrace$
+	Veamos quién es el generado de $ S $, un conjunto genera a otro si todo elemento del segundo conjunto puede ser expresado como una combinación lineal del primero,en este caso elementos de $ S $
 	
+	Sean $ \alpha, \beta, \gamma  \in \R$ entonces 
+	\[\alpha(2,-4,1) + \beta(0,3,-1) + \gamma(6,0,-1)  \]
+	\begin{align*}
+		\alpha(2,-4,1) + \beta(0,3,-1) + \gamma(6,0,-1)  &= (2\alpha, -4\alpha, \alpha) + (0, 3\beta, -\beta) + (6\gamma, 0, -\gamma)\\
+		&= (2\alpha + 6\gamma, -4\alpha + 3\beta, \alpha - \beta - \gamma)
+	\end{align*}
+	
+	Necesitamos que cada uno de dichos vectores pueda ser el valor de una posición en $ \R^3 $ por lo que debería de verse como
+	
+	\begin{align*}
+	\alpha(2,-4,1) + \beta(0,3,-1) + \gamma(6,0,-1)  &= \delta(1,0,0) + \xi(0, 1, 0) + \eta(0,0,1)
+	\end{align*}	
+	
+	De esta manera obtenemos el siguiente sistema de ecuaciones
+	
+	\begin{align*}
+		2\alpha + 0\beta + 6\gamma &= \delta + 0\xi + 0\eta\\
+		-4\alpha + 3\beta + 0\gamma &= 0\delta + \xi + 0\eta\\
+		\alpha - \beta - \gamma &=  0\delta + 0\xi + \eta
+	\end{align*}
+
+		\begin{align*}
+		\begin{pmatrix}
+			2\alpha & 0\beta & 6\gamma\\
+			-4\alpha & 3\beta & 0\gamma\\
+			\alpha & -\beta & -\gamma
+		\end{pmatrix} &=
+		\begin{pmatrix}
+			\delta & 0\xi & 0\eta\\
+			0\delta & \xi & 0\eta\\
+			0\delta & 0\xi & \eta
+		\end{pmatrix} =
+		\begin{pmatrix}[ccc|ccc]
+			2\alpha & 0\beta & 6\gamma & \delta & 0\xi & 0\eta\\
+			-4\alpha & 3\beta & 0\gamma & 0\delta & \xi & 0\eta\\
+			\alpha & -\beta & -\gamma & 0\delta & 0\xi & \eta
+		\end{pmatrix}
+		\end{align*}
 	
 	c) $\lbrace (1,2,-1),(1,0,2),(2,1,1) \rbrace$\\
 \noindent \textbf{9.} Diga si los siguientes $x^3-2x^2+1,4x^2-x+3 y 3x-2$ generan a $P_{3}(\R)$
@@ -804,110 +843,110 @@ Sea $ax^3+bx^2+cx+d\in(\R)$. Tomamos $\alpha_{1},\alpha_{2},\alpha_{3}\in (\R)$.
 
 $ax^3+bx^2+cx+d = (\alpha_{1})x^3 + (-2\alpha_{1}+4\alpha_{2})x^2 + (\alpha_{2}+3\alpha_{3})x + (\alpha_{1}+3\alpha_{2}-2\alpha_{3})$
 
-Tenemos el siguiente sistema de ecuaciones:
-\begin{center}
-	\begin{align*}
-	\alpha_{1}&=a\\
-	-2\alpha_{1}+4\alpha_{2}&=b\\
-	-\alpha_{2}+3\alpha_{3}&=c\\
-	\alpha_{1}+3\alpha_{2}-2\alpha_{3}&=d
-	\end{align*}
-\end{center}
-Sustituimos $\alpha_{1}$ en las demás ecuaciones
-\begin{center}
-	\begin{align*}
-	\alpha_{1}&=a\\
-	-2a+4\alpha_{2}&=b\\
-	-\alpha_{2}+3\alpha_{3}&=c\\
-	a+3\alpha_{2}-2\alpha_{3}&=d
-	\end{align*}
-\end{center}
-Del renglón 2 es fácil apreciar cuál es el valor de $\alpha_{2}$
-\begin{center}
-	\begin{align*}
-	\alpha_{1}&=a\\
-	\alpha_{2}&=\frac{b+2a}{4}\\
-	-\alpha_{2}+3\alpha_{3}&=c\\
-	\alpha_{1}+3\alpha_{2}-2\alpha_{3}&=d
-	\end{align*}
-\end{center}
-De igual forma sustituimos $\alpha_{2}$ en las demás ecuaciones.
-\begin{center}
-	\begin{align*}
-	\alpha_{1}&=a\\
-	\alpha_{2}&=\frac{b+2a}{4}\\
-	-(\frac{b+2a}{4})+3\alpha_{3}&=c\\
-	a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
-	\end{align*}
-\end{center}
-Observamos que tenemos 2 ecuaciones, en las cuáles sólo hay un valor a encontrar, entonces en estas dos ecuaciones procedemos a encontrar el valor de $\alpha_{3}$. Primero comenzaremos con el renglón 3.
-\begin{center}
-	\begin{align*}
-	\alpha_{1}&=a\\
-	\alpha_{2}&=\frac{b+2a}{4}\\
-	3\alpha_{3}&=\frac{4c}{4}+(\frac{b+2a}{4})\\
-	a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
-	\end{align*}
-\end{center}
-Ahora:
-\begin{center}
-	\begin{align*}
-	\alpha_{1}&=a\\
-	\alpha_{2}&=\frac{b+2a}{4}\\
-	\alpha_{3}&=\frac{\frac{4c+b+2a}{4}}{3}\\
-	a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
-	\end{align*}
-\end{center}
-Obtenemos el primer valor de $\alpha_{3}$: 
-\begin{center}
-	\begin{align*}
-	\alpha_{1}&=a\\
-	\alpha_{2}&=\frac{b+2a}{4}\\
-	\alpha_{3}&=\frac{4c+b+2a}{12}\\
-	a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
-	\end{align*}
-\end{center}
-Encontraremos el valor de $\alpha_{3}$ en la ecuación cuatro.
-\begin{center}
-	\begin{align*}
-	\alpha_{1}&=a\\
-	\alpha_{2}&=\frac{b+2a}{4}\\
-	\alpha_{3}&=\frac{4c+b+2a}{12}\\
-	a+(\frac{3b+6a}{4})-2\alpha_{3}&=d
-	\end{align*}
-\end{center}
-\begin{center}
-	\begin{align*}
-	\alpha_{1}&=a\\
-	\alpha_{2}&=\frac{b+2a}{4}\\
-	\alpha_{3}&=\frac{4c+b+2a}{12}\\
-	2\alpha_{3}&=a+(\frac{3b+6a}{4})-d
-	\end{align*}
-\end{center}
-\begin{center}
-	\begin{align*}
-	\alpha_{1}&=a\\
-	\alpha_{2}&=\frac{b+2a}{4}\\
-	\alpha_{3}&=\frac{4c+b+2a}{12}\\
-	2\alpha_{3}&=\frac{4a}{4}+(\frac{3b+6a}{4})-\frac{4d}{4}
-	\end{align*}
-\end{center}
-\begin{center}
-	\begin{align*}
-	\alpha_{1}&=a\\
-	\alpha_{2}&=\frac{b+2a}{4}\\
-	\alpha_{3}&=\frac{4c+b+2a}{12}\\
-	\alpha_{3}&=\frac{\frac{3b+10a-4d}{4}}{2}
-	\end{align*}
-\end{center}
-\begin{center}
-	\begin{align*}
-	\alpha_{1}&=a\\
-	\alpha_{2}&=\frac{b+2a}{4}\\
-	\alpha_{3}&=\frac{4c+b+2a}{12}\\
-	\alpha_{3}&=\frac{3b+10a-4d}{8}
-	\end{align*}
-\end{center}
+	Tenemos el siguiente sistema de ecuaciones:
+	\begin{center}
+		\begin{align*}
+		\alpha_{1}&=a\\
+		-2\alpha_{1}+4\alpha_{2}&=b\\
+		-\alpha_{2}+3\alpha_{3}&=c\\
+		\alpha_{1}+3\alpha_{2}-2\alpha_{3}&=d
+		\end{align*}
+	\end{center}
+	Sustituimos $\alpha_{1}$ en las demás ecuaciones
+	\begin{center}
+		\begin{align*}
+		\alpha_{1}&=a\\
+		-2a+4\alpha_{2}&=b\\
+		-\alpha_{2}+3\alpha_{3}&=c\\
+		a+3\alpha_{2}-2\alpha_{3}&=d
+		\end{align*}
+	\end{center}
+	Del renglón 2 es fácil apreciar cuál es el valor de $\alpha_{2}$
+	\begin{center}
+		\begin{align*}
+		\alpha_{1}&=a\\
+		\alpha_{2}&=\frac{b+2a}{4}\\
+		-\alpha_{2}+3\alpha_{3}&=c\\
+		\alpha_{1}+3\alpha_{2}-2\alpha_{3}&=d
+		\end{align*}
+	\end{center}
+	De igual forma sustituimos $\alpha_{2}$ en las demás ecuaciones.
+	\begin{center}
+		\begin{align*}
+		\alpha_{1}&=a\\
+		\alpha_{2}&=\frac{b+2a}{4}\\
+		-(\frac{b+2a}{4})+3\alpha_{3}&=c\\
+		a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
+		\end{align*}
+	\end{center}
+	Observamos que tenemos 2 ecuaciones, en las cuáles sólo hay un valor a encontrar, entonces en estas dos ecuaciones procedemos a encontrar el valor de $\alpha_{3}$. Primero comenzaremos con el renglón 3.
+	\begin{center}
+		\begin{align*}
+		\alpha_{1}&=a\\
+		\alpha_{2}&=\frac{b+2a}{4}\\
+		3\alpha_{3}&=\frac{4c}{4}+(\frac{b+2a}{4})\\
+		a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
+		\end{align*}
+	\end{center}
+	Ahora:
+	\begin{center}
+		\begin{align*}
+		\alpha_{1}&=a\\
+		\alpha_{2}&=\frac{b+2a}{4}\\
+		\alpha_{3}&=\frac{\frac{4c+b+2a}{4}}{3}\\
+		a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
+		\end{align*}
+	\end{center}
+	Obtenemos el primer valor de $\alpha_{3}$: 
+	\begin{center}
+		\begin{align*}
+		\alpha_{1}&=a\\
+		\alpha_{2}&=\frac{b+2a}{4}\\
+		\alpha_{3}&=\frac{4c+b+2a}{12}\\
+		a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
+		\end{align*}
+	\end{center}
+	Encontraremos el valor de $\alpha_{3}$ en la ecuación cuatro.
+	\begin{center}
+		\begin{align*}
+		\alpha_{1}&=a\\
+		\alpha_{2}&=\frac{b+2a}{4}\\
+		\alpha_{3}&=\frac{4c+b+2a}{12}\\
+		a+(\frac{3b+6a}{4})-2\alpha_{3}&=d
+		\end{align*}
+	\end{center}
+	\begin{center}
+		\begin{align*}
+		\alpha_{1}&=a\\
+		\alpha_{2}&=\frac{b+2a}{4}\\
+		\alpha_{3}&=\frac{4c+b+2a}{12}\\
+		2\alpha_{3}&=a+(\frac{3b+6a}{4})-d
+		\end{align*}
+	\end{center}
+	\begin{center}
+		\begin{align*}
+		\alpha_{1}&=a\\
+		\alpha_{2}&=\frac{b+2a}{4}\\
+		\alpha_{3}&=\frac{4c+b+2a}{12}\\
+		2\alpha_{3}&=\frac{4a}{4}+(\frac{3b+6a}{4})-\frac{4d}{4}
+		\end{align*}
+	\end{center}
+	\begin{center}
+		\begin{align*}
+		\alpha_{1}&=a\\
+		\alpha_{2}&=\frac{b+2a}{4}\\
+		\alpha_{3}&=\frac{4c+b+2a}{12}\\
+		\alpha_{3}&=\frac{\frac{3b+10a-4d}{4}}{2}
+		\end{align*}
+	\end{center}
+	\begin{center}
+		\begin{align*}
+		\alpha_{1}&=a\\
+		\alpha_{2}&=\frac{b+2a}{4}\\
+		\alpha_{3}&=\frac{4c+b+2a}{12}\\
+		\alpha_{3}&=\frac{3b+10a-4d}{8}
+		\end{align*}
+	\end{center}
 
 Una vez que encontramos los valores $\alpha_{1}, \alpha_{2}, \alpha_{3}$, para ver que el conjunto dado genera a cualquier polinomio de grado tres, damos algún polinomio y este tendrá que poder escribirse como combinación lineal los elementos del conjunto y los escalares.\\
 
@@ -916,15 +955,14 @@ Elegimos el polinomio $5x^3+2x^2x+2$.Ahora encontraremos los valores de $\alpha_
 	$ax^3+bx^2+cx+d = (\alpha_{1})x^3 + (-2\alpha_{1}+4\alpha_{2})x^2 + (\alpha_{2}+3\alpha_{3})x + (\alpha_{1}+3\alpha_{2}-2\alpha_{3})$
 \end{center} 
 Utilizando los resultados del sistema de ecuaciones tenemos que:
-\begin{center}
-\begin{align*}
-\alpha_{1}=5\\
-\alpha_{2}=3\\
-\alpha_{3}=6\\
-\alpha_{3}=\frac{20}{12}
-\end{align*}
-\end{center}
 
+		\begin{align*}
+		\alpha_{1}&=5\\
+		\alpha_{2}&=3\\
+		\alpha_{3}&=6\\
+		\alpha_{3}&=\frac{20}{12}
+		\end{align*}
+		
 Como podemos apreciar los valores de $\alpha_{3}$ no son los mismos, y esto es debido a que originalmente teníamos un sistema de 4 ecuaciones con 3 incógnitas, entonces el sistema tiene diversas soluciones y al encontrar que los resultados de las ecuaciones de $\alpha_{3}$ no son el mismo, podemos concluir que el conjunto $x^3-2x^2+1,4x^2-x+3 y 3x-2$  \textbf{NO} generan a $P_{3}(\R)$
 
 
