Hasta la matriz escalonada del 8.b

--- a/Main.tex
+++ b/Main.tex
@@ -835,7 +835,29 @@ Recuerde que $P_{n}(\mathbb{R}) = \{ a_0 +  a_1x +  a_2x^2 + \cdots +  a_n x^n \
 			\alpha & -\beta & -\gamma & 0\delta & 0\xi & \eta
 		\end{pmatrix}
 		\end{align*}
-	
+		
+		\begin{align*}
+			 \begin{pmatrix}[ccc|ccc]
+			 2\alpha & 0\beta & 6\gamma & \delta & 0\xi & 0\eta\\
+			 -4\alpha & 3\beta & 0\gamma& 0\delta & \xi & 0\eta\\
+			 \alpha & -\beta & -\gamma & 0\delta & 0\xi & \eta
+			 \end{pmatrix} &= \begin{pmatrix}[ccc|ccc]
+			 \alpha & 0\beta & \gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			 -4\alpha & 3\beta & 0\gamma& 0\delta & \xi & 0\eta\\
+			 \alpha & -\beta & -\gamma & 0\delta & 0\xi & \eta
+			 \end{pmatrix}		  && \text{1ra fila $ \* \dfrac{1}{2}$ en 1a Fila } 
+		\end{align*}
+		\begin{align*}
+			\begin{pmatrix}[ccc|ccc]
+			2\alpha & 0\beta & 6\gamma & \delta & 0\xi & 0\eta\\
+			-4\alpha & 3\beta & 0\gamma& 0\delta & \xi & 0\eta\\
+			\alpha & -\beta & -\gamma & 0\delta & 0\xi & \eta
+			\end{pmatrix} &= \begin{pmatrix}[ccc|ccc]
+			\alpha & 0\beta & \gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			-4\alpha & 3\beta & 0\gamma& 0\delta & \xi & 0\eta\\
+			\alpha & -\beta & -\gamma & 0\delta & 0\xi & \eta
+			\end{pmatrix}		  && \text{1ra fila $ \* \dfrac{1}{2}$ en 1a Fila } 
+		\end{align*}
 	c) $\lbrace (1,2,-1),(1,0,2),(2,1,1) \rbrace$\\
 \noindent \textbf{9.} Diga si los siguientes $x^3-2x^2+1,4x^2-x+3 y 3x-2$ generan a $P_{3}(\R)$
 
