--- a/Main.tex
+++ b/Main.tex
@@ -842,21 +842,84 @@ Recuerde que $P_{n}(\mathbb{R}) = \{ a_0 +  a_1x +  a_2x^2 + \cdots +  a_n x^n \
 			 -4\alpha & 3\beta & 0\gamma& 0\delta & \xi & 0\eta\\
 			 \alpha & -\beta & -\gamma & 0\delta & 0\xi & \eta
 			 \end{pmatrix} &= \begin{pmatrix}[ccc|ccc]
-			 \alpha & 0\beta & \gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			 \alpha & 0\beta & 3\gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
 			 -4\alpha & 3\beta & 0\gamma& 0\delta & \xi & 0\eta\\
 			 \alpha & -\beta & -\gamma & 0\delta & 0\xi & \eta
 			 \end{pmatrix}		  && \text{1ra fila $ \* \dfrac{1}{2}$ en 1a Fila } 
 		\end{align*}
 		\begin{align*}
 			\begin{pmatrix}[ccc|ccc]
-			2\alpha & 0\beta & 6\gamma & \delta & 0\xi & 0\eta\\
+			\alpha & 0\beta & 3\gamma & \delta & 0\xi & 0\eta\\
 			-4\alpha & 3\beta & 0\gamma& 0\delta & \xi & 0\eta\\
 			\alpha & -\beta & -\gamma & 0\delta & 0\xi & \eta
 			\end{pmatrix} &= \begin{pmatrix}[ccc|ccc]
 			\alpha & 0\beta & \gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
-			-4\alpha & 3\beta & 0\gamma& 0\delta & \xi & 0\eta\\
+			0\alpha & 3\beta & 12\gamma& 2\delta & \xi & 0\eta\\
 			\alpha & -\beta & -\gamma & 0\delta & 0\xi & \eta
-			\end{pmatrix}		  && \text{1ra fila $ \* \dfrac{1}{2}$ en 1a Fila } 
+			\end{pmatrix}		  && \text{(1ra fila $ \* 4$)+2a fila en 2a Fila } \\  \begin{pmatrix}[ccc|ccc]
+			\alpha & 0\beta & 3\gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			0\alpha & 3\beta & 12\gamma& 2\delta & \xi & 0\eta\\
+			\alpha & -\beta & -\gamma & 0\delta & 0\xi & \eta
+			\end{pmatrix} &=  \begin{pmatrix}[ccc|ccc]
+			\alpha & 0\beta & 3\gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			0\alpha & 3\beta & 12\gamma& 2\delta & \xi & 0\eta\\
+			0\alpha & -\beta & -4\gamma & -\frac{1}{2}\delta & 0\xi & \eta
+			\end{pmatrix} && \text{3ra fila - 1ra fila en 3ra fila}
+		\end{align*}
+		\begin{align*}
+			\begin{pmatrix}[ccc|ccc]
+			\alpha & 0\beta & 3\gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			0\alpha & 3\beta & 12\gamma& 2\delta & \xi & 0\eta\\
+			0\alpha & -\beta & -4\gamma & -\frac{1}{2}\delta & 0\xi & \eta
+			\end{pmatrix} &= \begin{pmatrix}[ccc|ccc]
+			\alpha & 0\beta & 3\gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			0\alpha & \beta & 4\gamma& \frac{2}{3}\delta & \frac{1}{3}\xi & 0\eta\\
+			0\alpha & -\beta & -4\gamma & -\frac{1}{2}\delta & 0\xi & \eta
+			\end{pmatrix} &&  \text{2fa fila $ \* \dfrac{1}{3} $ en 2a fila}\\
+			\begin{pmatrix}[ccc|ccc]
+			\alpha & 0\beta & 3\gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			0\alpha & \beta & 4\gamma& \frac{2}{3}\delta & \frac{1}{3}\xi & 0\eta\\
+			0\alpha & -\beta & -4\gamma & -\frac{1}{2}\delta & 0\xi & \eta
+			\end{pmatrix} &= \begin{pmatrix}[ccc|ccc]
+			\alpha & 0\beta & 3\gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			0\alpha & \beta & 4\gamma& \frac{2}{3}\delta & \frac{1}{3}\xi & 0\eta\\
+			0\alpha & 0\beta & 0\gamma & \frac{1}{6}\delta & \frac{1}{3}\xi & \eta
+			\end{pmatrix} && \text{3ra fila -2a fila en 3a fila}\\
+			\begin{pmatrix}[ccc|ccc]
+			\alpha & 0\beta & 3\gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			0\alpha & \beta & 4\gamma& \frac{2}{3}\delta & \frac{1}{3}\xi & 0\eta\\
+			0\alpha & 0\beta & 0\gamma & \frac{1}{6}\delta & \frac{1}{3}\xi & \eta
+			\end{pmatrix} & = \begin{pmatrix}[ccc|ccc]
+			\alpha & 0\beta & 3\gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			0\alpha & \beta & 4\gamma& \frac{2}{3}\delta & \frac{1}{3}\xi & 0\eta\\
+			0\alpha & 0\beta & 0\gamma & \delta & 2\xi & 6\eta
+			\end{pmatrix} && \text{3a fila $ \* 6 $ en 3a fila}\\
+			 \begin{pmatrix}[ccc|ccc]
+			 \alpha & 0\beta & 3\gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			 0\alpha & \beta & 4\gamma& \frac{2}{3}\delta & \frac{1}{3}\xi & 0\eta\\
+			 0\alpha & 0\beta & 0\gamma & \delta & 2\xi & 6\eta
+			 \end{pmatrix} & =  \begin{pmatrix}[ccc|ccc]
+			 \alpha & 0\beta & 3\gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			 0\alpha & \beta & 4\gamma& 0\delta & -\xi & -4\eta\\
+			 0\alpha & 0\beta & 0\gamma & \delta & 2\xi & 6\eta
+			 \end{pmatrix} && \text{3a fila $ \* -\dfrac{2}{3} $ + 2a fila en 2a fila}\\\begin{pmatrix}[ccc|ccc]
+			 \alpha & 0\beta & 3\gamma & \frac{1}{2}\delta & 0\xi & 0\eta\\
+			 0\alpha & \beta & 4\gamma& 0\delta & -\xi & -4\eta\\
+			 0\alpha & 0\beta & 0\gamma & \delta & 2\xi & 6\eta
+			 \end{pmatrix} & = \begin{pmatrix}[ccc|ccc]
+			 \alpha & 0\beta & 3\gamma & 0\delta & -\xi & -3\eta\\
+			 0\alpha & \beta & 4\gamma& 0\delta & -\xi & -4\eta\\
+			 0\alpha & 0\beta & 0\gamma & \delta & 2\xi & 6\eta
+			 \end{pmatrix} && \text{3a fila $ \* -\dfrac{1}{2} $ + 1a fila en 1a fila}\\
+			 \begin{pmatrix}[ccc|ccc]
+			 \alpha & 0\beta & 3\gamma & 0\delta & -\xi & -3\eta\\
+			 0\alpha & \beta & 4\gamma& 0\delta & -\xi & -4\eta\\
+			 0\alpha & 0\beta & 0\gamma & \delta & 2\xi & 6\eta
+			 \end{pmatrix} & = \begin{pmatrix}[ccc|ccc]
+			 1 & 0 & 3 & 0 & -1 & -3\\
+			 0 & 1 & 4& 0 & -1 & -4\\
+			 0 & 0 & 0 & 1 & 2 & 6
+			 \end{pmatrix} && \text{Conservando sólo coeficientes }
 		\end{align*}
 	c) $\lbrace (1,2,-1),(1,0,2),(2,1,1) \rbrace$\\
 \noindent \textbf{9.} Diga si los siguientes $x^3-2x^2+1,4x^2-x+3 y 3x-2$ generan a $P_{3}(\R)$
